{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 39,
  "lineage": "8d850387-cfc0-9c78-1459-7af92ed38756",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2img",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb91c7de36eed2cb",
            "arn": "arn:aws:ec2:us-east-2:654654263644:instance/i-08535a83d9ce0b702",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08535a83d9ce0b702",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a71c4d9b6ed8249a",
            "private_dns": "ip-10-0-1-132.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-13-58-85-99.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.85.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07ac0bb6ef60361ac",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053f16a33dfbdb2ca",
            "tags": {
              "Name": "ec2img"
            },
            "tags_all": {
              "Name": "ec2img"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033c81716bc905c23"
            ]
          },
          "dependencies": [
            "aws_security_group.cw_sg",
            "aws_subnet.publica",
            "aws_vpc.vepece"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bd_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654263644:security-group/sg-00da9ef22a9168bdd",
            "description": "SecurityGroup banco de dados",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00da9ef22a9168bdd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033c81716bc905c23"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bd-sg",
            "name_prefix": "",
            "owner_id": "654654263644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bd_sg"
            },
            "tags_all": {
              "Name": "bd_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f2e1602365066d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cw_sg",
            "aws_vpc.vepece"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cw_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654263644:security-group/sg-033c81716bc905c23",
            "description": "Security group for web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033c81716bc905c23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cw-sg",
            "name_prefix": "",
            "owner_id": "654654263644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cw-sg"
            },
            "tags_all": {
              "Name": "cw-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f2e1602365066d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vepece"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654263644:subnet/subnet-052e0d44154eb81be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052e0d44154eb81be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654263644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privada"
            },
            "tags_all": {
              "Name": "privada"
            },
            "vpc_id": "vpc-00f2e1602365066d9"
          },
          "dependencies": [
            "aws_vpc.vepece"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654263644:subnet/subnet-000c767c47acb3711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000c767c47acb3711",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654263644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privada2"
            },
            "tags_all": {
              "Name": "privada2"
            },
            "vpc_id": "vpc-00f2e1602365066d9"
          },
          "dependencies": [
            "aws_vpc.vepece"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654263644:subnet/subnet-053f16a33dfbdb2ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053f16a33dfbdb2ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654263644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publica"
            },
            "tags_all": {
              "Name": "publica"
            },
            "vpc_id": "vpc-00f2e1602365066d9"
          },
          "dependencies": [
            "aws_vpc.vepece"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vepece",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654263644:vpc/vpc-00f2e1602365066d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a85444b2051173d",
            "default_route_table_id": "rtb-07120b165ec424466",
            "default_security_group_id": "sg-0060c3475b13b5f5c",
            "dhcp_options_id": "dopt-03286acf38992f9ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f2e1602365066d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07120b165ec424466",
            "owner_id": "654654263644",
            "tags": {
              "Name": "vepece"
            },
            "tags_all": {
              "Name": "vepece"
            }
          }
        }
      ]
    }
  ]
}